[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Scenes/Portal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_03.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_05.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_06.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_08.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_09.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_11.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_12.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_13.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_14.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_15.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_16.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_17.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_18.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/GateOpen/gateopen_10.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Tileset/Portal/portal.png" type="Texture" id=21]
[ext_resource path="res://Assets/Scenes/SoundFX.tscn" type="PackedScene" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Opening",
"speed": 70.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Closing",
"speed": 70.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Locked",
"speed": 70.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 21.0238

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="Portal" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="SpriteSetClosed" type="Node2D" parent="."]
z_index = 3

[node name="PortalBack1" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.137255, 0, 0.243137, 1 )
self_modulate = Color( 1, 1, 1, 0.462745 )
frames = SubResource( 1 )
animation = "Locked"
offset = Vector2( -0.543586, -0.233912 )

[node name="PortalBack2" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.105882, 0, 0.235294, 1 )
self_modulate = Color( 1, 1, 1, 0.643137 )
position = Vector2( -9.53674e-007, -2.38419e-007 )
rotation = -0.248612
frames = SubResource( 1 )
animation = "Locked"
offset = Vector2( -0.385951, -0.596381 )

[node name="PortalBack3" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0.403922, 0, 0.529412, 1 )
self_modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( -9.53674e-007, -2.38419e-007 )
rotation = -0.470022
frames = SubResource( 1 )
animation = "Locked"
offset = Vector2( -0.38193, -0.54178 )

[node name="PortalBack4" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( -9.53674e-007, -2.38419e-007 )
rotation = -0.679066
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Locked"
offset = Vector2( -0.38193, -0.54178 )

[node name="PortalBack5" type="AnimatedSprite" parent="SpriteSetClosed"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -9.53674e-007, -2.38419e-007 )
rotation = -1.07561
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Locked"
offset = Vector2( -0.38193, -0.54178 )

[node name="SpriteSetOpen" type="Node2D" parent="."]

[node name="PortalBack1" type="Sprite" parent="SpriteSetOpen"]
visible = false
modulate = Color( 0.392157, 0, 0.784314, 0.454902 )
rotation = -1.31598
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 21 )

[node name="PortalBack2" type="Sprite" parent="SpriteSetOpen"]
visible = false
modulate = Color( 0.27451, 0, 0.576471, 0.478431 )
rotation = -0.111701
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 21 )

[node name="PortalBack3" type="Sprite" parent="SpriteSetOpen"]
visible = false
modulate = Color( 0.458824, 0, 0.741176, 0.478431 )
rotation = -3.68963
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 21 )

[node name="PortalFront" type="Sprite" parent="SpriteSetOpen"]
visible = false
modulate = Color( 0.627451, 0, 1, 1 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 21 )

[node name="INTERACT_Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="INTERACT_Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource( 3 )
disabled = true

[node name="SoundFX" parent="." instance=ExtResource( 22 )]

[node name="QuickSoundFX" parent="." instance=ExtResource( 22 )]

[node name="QueueFreeTimer" type="Timer" parent="."]

[node name="MaxLifeTimeTimer" type="Timer" parent="."]
wait_time = 60.0
[connection signal="animation_finished" from="SpriteSetClosed/PortalBack1" to="." method="_on_PortalBack1_animation_finished"]
[connection signal="area_entered" from="INTERACT_Area2D" to="." method="_on_INTERACT_Area2D_area_entered"]
[connection signal="area_exited" from="INTERACT_Area2D" to="." method="_on_INTERACT_Area2D_area_exited"]
[connection signal="body_entered" from="INTERACT_Area2D" to="." method="_on_INTERACT_Area2D_body_entered"]
[connection signal="body_exited" from="INTERACT_Area2D" to="." method="_on_INTERACT_Area2D_body_exited"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_QueueFreeTimer_timeout"]
[connection signal="timeout" from="MaxLifeTimeTimer" to="." method="_on_MaxLifeTimeTimer_timeout"]
